Lab5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default  # Убедитесь, что namespace - default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: six-dew-lab5.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend  # Название сервиса
            port:
              number: 80
